--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "18.2.0",
+    "react-html-parser": "^2.0.2",
     "sass": "^1.62.1",
+    "transition-hook": "^1.5.2",
     "typescript": "5.1.3"
   }
 }
