--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material/web": "^1.0.0-pre.9",
     "@mui/material": "^5.13.3",
     "@mui/system": "^5.13.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.1",
     "formik-mui": "^5.0.0-alpha.0",
     "formik-mui-x-date-pickers": "^0.0.1",
     "next": "13.4.4",
@@ -30,6 +35,7 @@
     "react-html-parser": "^2.0.2",
     "sass": "^1.62.1",
     "styled-components": "^6.0.0-rc.3",
+    "tiny-warning": "^1.0.3",
     "transition-hook": "^1.5.2",
     "typescript": "5.1.3"
   }
