--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "styled-components": "^6.0.0-rc.3",
     "tiny-warning": "^1.0.3",
     "transition-hook": "^1.5.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "yup": "^1.2.0"
   }
 }
