--- a/package.json
+++ b/package.json
@@ -15,29 +15,31 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material/web": "^1.0.0-pre.9",
+    "@mui/joy": "^5.0.0-alpha.85",
     "@mui/material": "^5.13.3",
     "@mui/system": "^5.13.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "formik": "^2.4.1",
-    "formik-mui": "^5.0.0-alpha.0",
-    "formik-mui-x-date-pickers": "^0.0.1",
-    "next": "13.4.4",
+    "eslint-config-next": "^12.0.4",
+    "next": "^13.4.7",
+    "npm": "^9.7.2",
     "react": "18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "^5.3.11",
     "tiny-warning": "^1.0.3",
     "transition-hook": "^1.5.2",
-    "typescript": "5.1.3",
-    "yup": "^1.2.0"
+    "typescript": "5.1.3"
   }
 }
