--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "tiny-warning": "^1.0.3",
     "transition-hook": "^1.5.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-custom-scrollbars": "^4.0.10"
   }
 }
