--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/react-custom-scrollbars": "^4.0.10"
+    "@types/react-custom-scrollbars": "^4.0.10",
+    "@types/react-html-parser": "^2.0.2"
   }
 }
