--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material/web": "^1.0.0-pre.9",
+    "@mui/icons-material": "^5.13.7",
     "@mui/joy": "^5.0.0-alpha.85",
     "@mui/material": "^5.13.3",
     "@mui/system": "^5.13.2",
