--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=7200 next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "eslint": "8.42.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react-custom-scrollbars": "^4.0.10",
-    "@types/react-html-parser": "^2.0.2"
+    "@types/react-html-parser": "^2.0.2",
+    "mui-file-input": "^2.0.4"
   }
 }
