--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "bootstrap": "^5.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "^12.0.4",
+    "material-react-table": "^1.14.0",
     "next": "^13.4.7",
     "npm": "^9.7.2",
     "react": "18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-html-parser": "^2.0.2",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
