--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.42.0",
     "eslint-config-next": "^12.0.4",
     "material-react-table": "^1.14.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-html-parser": "^2.0.2",
-    "mui-file-input": "^2.0.4"
+    "mui-file-input": "^2.0.4",
+    "rimraf": "^5.0.1"
   }
 }
