--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "NODE_ENV=development next dev",
     "build": "NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
-    "lint": "next lint",
-    "test": "next test",
-    "flow": "flow"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^39.0.2",
@@ -24,14 +22,14 @@
     "@mui/material": "^5.13.3",
     "@mui/system": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^5.24.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "axios": "^1.6.8",
+    "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "copy-webpack-plugin": "^11.0.0",
+    "dotenv": "^16.4.5",
     "eslint": "8.42.0",
     "eslint-config-next": "^12.0.4",
     "material-react-table": "^1.14.0",
@@ -56,8 +54,6 @@
   "devDependencies": {
     "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-html-parser": "^2.0.2",
-    "dotenv": "^16.4.4",
-    "flow-bin": "^0.229.0",
     "mui-file-input": "^2.0.4",
     "rimraf": "^5.0.1"
   }
