--- a/package.json
+++ b/package.json
@@ -11,30 +11,25 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^39.0.2",
     "@ckeditor/ckeditor5-react": "^6.1.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/pro-duotone-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@material/web": "^1.0.0-pre.9",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/joy": "^5.0.0-alpha.85",
-    "@mui/material": "^5.13.3",
-    "@mui/system": "^5.13.2",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.3.1",
+    "@mui/x-date-pickers": "^7.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "axios": "^1.4.0",
-    "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^5.3.0",
-    "copy-webpack-plugin": "^11.0.0",
     "dotenv": "^16.4.5",
     "eslint": "8.42.0",
     "eslint-config-next": "^12.0.4",
-    "material-react-table": "^1.14.0",
+    "material-react-table": "^1.15.1",
     "next": "^13.4.7",
-    "npm": "^9.7.2",
     "react": "18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.5.0",
@@ -44,17 +39,12 @@
     "react-html-parser": "^2.0.2",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
-    "styled-components": "^5.3.11",
-    "tiny-warning": "^1.0.3",
-    "transition-hook": "^1.5.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-html-parser": "^2.0.2",
-    "mui-file-input": "^2.0.4",
-    "rimraf": "^5.0.1"
+    "styled-components": "^6.1.8"
   }
 }
